client/src/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

html {
    background-color: oklch(1 0 0);
}

@media (prefers-reduced-motion: no-preference) {
    html {
        interpolate-size: allow-keywords;
    }
}

body {
    font-family: system-ui, sans-serif;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    color: oklch(0 0 0);
}

img,
picture {
    display: block;
    max-inline-size: 100%;
    block-size: auto;
}

button,
input,
textarea {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

p {
    text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-wrap: balance;
}

#app {
    display: grid;
    grid-template-rows: auto 1fr auto;
    min-height: 100vh;
    isolation: isolate;
}

.back-button {
    font-size: 1.125rem;
    cursor: pointer;
    text-decoration: underline;
    background: none;
    border: none;
}

/* Utility */

.container {
    inline-size: 100%;
    max-inline-size: calc(70rem + 3rem);
    padding-inline: 1.25rem;
    margin-inline: auto;
    container-type: inline-size;
}

.visually-hidden {
    position: absolute;
    clip: rect(1px, 1px, 1px, 1px);
    -webkit-clip-path: inset(0px 0px 99.9% 99.9%);
    clip-path: inset(0px 0px 99.9% 99.9%);
    overflow: hidden;
    height: 1px;
    width: 1px;
    padding: 0;
    border: 0;
}

/* Header och nav */

.header {
    inline-size: 100%;
    overflow: hidden;
    background-color: oklch(1 0 0);
}

.header__layout {
    display: grid;
    grid-template-areas: "logo" "nav";
    gap: 1.5rem;
    padding-block: 1.5rem;

    @media (width >=60rem) {
        grid-template-areas: "logo nav";
    }
}

.logo {
    display: block;
    color: oklch(0 0 0);
    text-decoration: none;
    place-self: center center;

    @media (width >=60rem) {
        place-self: center start;
    }
}

.logo__text {
    font-size: 2rem;
    font-weight: 400;
    color: inherit;
}

.logo__accent {
    font-weight: 700;
    color: oklch(0.6379 0.2484 31.02);
}

.main-nav {
    display: flex;
    flex-flow: row wrap;
    gap: 1rem;
    place-self: center center;
    justify-content: center;
    inline-size: 100%;

    @media (width >=60rem) {
        inline-size: fit-content;
        place-self: center end;
        justify-content: end;
    }
}

.main-nav__link {
    font-size: 1.25rem;
    font-weight: 700;
    text-decoration: none;
    color: oklch(0 0 0);

    @media (hover: hover) {
        &:hover {
            text-decoration: underline;
        }
    }
}

/* Search container */

.search {
    border-radius: 0.5rem;
    background-color: oklch(1 0 0);
    color: oklch(0 0 0);
}

.search__form {
    display: flex;
    flex-flow: row wrap;
    gap: 0.75rem;
    inline-size: 100%;
    background-color: oklch(0.9702 0 0);
    padding: 1.5rem;
    border-radius: 0.5rem;
}

.search__input-wrapper {
    position: relative;
    flex: 1;
    min-inline-size: 0;
}

.search__input {
    border: 2px solid currentColor;
    border-radius: 0.5rem;
    padding-inline: 1rem;
    padding-block: 0.5rem;
    block-size: 3rem;
}

.search__input-wrapper .search__input {
    inline-size: 100%;
    padding-inline-end: 2.5rem;
}

.search__input-clear-button {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    inset-inline-end: 0.5rem;
    inset-block-start: 50%;
    transform: translateY(-50%);
    background: transparent;
    border: none;
    cursor: pointer;
    padding: 0.75rem;
}

.search__input-icon {
    inline-size: 1.25rem;
    block-size: 1.25rem;
}

.search__button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    padding-inline: 1rem;
    padding-block: 0.5rem;
    background-color: oklch(0 0 0);
    color: oklch(1 0 0);
    border: 2px solid oklch(0 0 0);
    border-radius: 0.5rem;
    block-size: 3rem;
    font-size: 1rem;
    font-weight: 700;
    text-decoration: none;
    inline-size: 100%;
    cursor: pointer;
    touch-action: manipulation;
    white-space: nowrap;

    @media (width >=60rem) {
        inline-size: fit-content;
    }
}

/* Page */

.page {
    display: flex;
    flex-flow: column wrap;
    row-gap: 1.5rem;
    margin-block: 1.5rem;
}

.page__header {
    display: flex;
    flex-flow: row wrap;
    gap: 1.5rem;
    justify-content: space-between;
    align-items: baseline;
}

.page__title {
    font-size: 2rem;
    font-weight: 700;
    margin-block-end: calc(-1rem);

    @media (width >=60rem) {
        font-size: 2.5rem;
    }
}

.page__introduction {
    font-size: 1.25rem;
    font-weight: 400;
}

/* Filmgrid */

.movie-cards {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 1.5rem;
}

/* Filmkort */

.movie-card {
    display: grid;
    grid-template-columns: auto;
    border-radius: 0.5rem;
    background-color: oklch(0.9702 0 0);
    overflow: hidden;

    @media (width >=60rem) {
        grid-template-columns: 1fr 2fr;
        row-gap: 1.5rem;
    }
}

.movie-card__textarea {
    line-clamp: 3;
}

.movie-card__image {
    overflow: hidden;

    & img {
        inline-size: 100%;
        aspect-ratio: 1;
        object-fit: cover;
        object-position: top;
    }
}

.movie-card__placeholder {
    display: flex;
    flex-flow: column wrap;
    gap: 1.5rem;
    align-items: center;
    justify-content: center;
    inline-size: 100%;
    block-size: 100%;
    background-color: oklch(0 0 0);
    color: oklch(1 0 0);
    aspect-ratio: 1;
}

.movie-card__placeholder-icon {
    inline-size: 5rem;
    block-size: auto;
    aspect-ratio: 1;
}

.movie-card__placeholder-label {
    font-size: 2rem;
    font-weight: 400;
}

.movie-card__content {
    place-self: center center;
    display: flex;
    flex-flow: column wrap;
    padding: 1.5rem;
    gap: calc(1.5rem / 2);
    text-overflow: ellipsis;
}

.movie-card__title {
    font-size: 1.5rem;
    font-weight: 700;
}

.movie-card__description {
    display: -webkit-box;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.movie-card__year {
    font-weight: 400;
}

.movie-card__rating {
    display: none;
}

.movie-card__actions {
    display: flex;
    flex-flow: row wrap;
    gap: 0.5rem;
}

.movie-card__button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    padding-inline: 1rem;
    padding-block: 0.5rem;
    border: 2px solid currentColor;
    border-radius: 0.5rem;
    block-size: 3rem;
    font-size: 1rem;
    font-weight: 700;
    text-decoration: none;
    inline-size: 100%;
    cursor: pointer;
    touch-action: manipulation;
    white-space: nowrap;

    @media (width >=60rem) {
        inline-size: fit-content;
    }

    &[aria-pressed="true"] {
        background-color: oklch(0 0 0);
        color: oklch(1 0 0);
    }
}

.movie-card__icon {
    inline-size: 1.5rem;
    block-size: 1.5rem;
    color: inherit;
}

.movie-card__button--details {
    background-color: oklch(0 0 0);
    color: oklch(1 0 0);
}

/* "Fusk-BEM", hehe */

.movie-card__content-group {
    display: flex;
    flex-flow: column wrap;
    gap: 0.25rem;
}

.movie-card__content-group-label {
    font-size: 1.125rem;
    font-weight: 700;
}

.movie-card__content-group-value {
    font-size: 1rem;
    font-weight: 400;
}

/* Inga filmer att visa */

.movie-cards__empty-list {
    display: grid;
    place-items: center;
    gap: .75rem;
}

/* Strictly for the lulz */

.movie-cards__empty-list-image {
    inline-size: calc(100% / 1.5); /* To not cause overflow */
    object-fit: cover;
    animation: pulsate 2s ease-in-out infinite alternate;
}

@keyframes pulsate {
    from {
        transform: scaleX(1);
    }

    to {
        transform: scaleX(1.5);
    }
}

.movie-cards__empty-list-heading {
    font-size: 1.25rem;
    font-weight: 700;
}

.movie-cards__empty-list-text {
    font-size: 1.125rem;
    font-weight: 400;
}
/* Footer */

.footer {
    inline-size: 100%;
    overflow: hidden;
    background-color: oklch(0 0 0);
    color: oklch(1 0 0);
}

.footer__layout {
    display: grid;
    grid-template-areas: "group up" "disclaimer disclaimer";
    grid-template-columns: 1fr auto;
    gap: 1.5rem;
    padding-block: 1.5rem;

    @media (width >=60rem) {
        grid-template-columns: 1fr 1fr;
    }
}

.footer__group-info {
    grid-area: group;
    place-self: center left;
    font-weight: 700;
    font-size: 1.25rem;
}

.footer__up-button {
    grid-area: up;
    place-self: center right;

    display: inline-flex;
    align-items: center;
    justify-content: center;
    background-color: oklch(1 0 0);
    color: oklch(0 0 0);
    border: none;
    border-radius: 0.5rem;
    padding: 0.5rem;
    inline-size: 3rem;
    block-size: 3rem;
    cursor: pointer;
}

.footer__up-button-icon {
    inline-size: 1.5rem;
    block-size: 1.5rem;
}

.footer__disclaimer-label {
    grid-area: disclaimer;
    grid-column: span 2;
    place-self: center left;

    @media (width >=60rem) {
        grid-column: span 1;
    }
}

